--- a/package.json
+++ b/package.json
@@ -38,9 +38,8 @@
     "grunt-newer": "^1.1.1",
     "grunt-postcss": "^0.7.1",
     "grunt-sass": "^1.1.0",
-    "grunt-scss-lint": "^0.3.8",
     "jshint-stylish": "^2.1.0",
-    "load-grunt-tasks": "^3.4.0",
+    "jit-grunt": "^0.9.1",
     "time-grunt": "^1.3.0"
   }
 }
