--- a/package.json
+++ b/package.json
@@ -20,26 +20,26 @@
   },
   "homepage": "https://github.com/demun/grunt-start-2#readme",
   "devDependencies": {
-    "autoprefixer": "^6.3.1",
-    "grunt": "^0.4.5",
-    "grunt-concurrent": "^2.1.0",
-    "grunt-contrib-clean": "^0.7.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-imagemin": "^2.0.1",
-    "grunt-contrib-jshint": "^0.11.3",
-    "grunt-contrib-uglify": "^0.11.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-csscomb": "^3.1.0",
-    "grunt-htmlhint": "^0.9.12-fix",
-    "grunt-includes": "^0.5.3",
-    "grunt-newer": "^1.1.1",
-    "grunt-postcss": "^0.7.1",
-    "grunt-sass": "^2.0.0",
-    "jit-grunt": "^0.9.1",
-    "jshint-stylish": "^2.1.0",
-    "time-grunt": "^1.3.0"
+    "autoprefixer": "^7.2.4",
+    "grunt": "^1.0.1",
+    "grunt-concurrent": "*",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-imagemin": "*",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-uglify": "^3.3.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-csscomb": "*",
+    "grunt-htmlhint": "*",
+    "grunt-includes": "^1.0.0",
+    "grunt-newer": "*",
+    "grunt-postcss": "^0.9.0",
+    "grunt-sass": "*",
+    "jit-grunt": "^0.10.0",
+    "jshint-stylish": "*",
+    "time-grunt": "*"
   }
 }
