sass 옵션변경에 따른 대처

--- a/package.json
+++ b/package.json
@@ -20,26 +20,27 @@
   },
   "homepage": "https://github.com/demun/grunt-start-2#readme",
   "devDependencies": {
-    "autoprefixer": "^7.2.4",
-    "grunt": "^1.0.1",
+    "autoprefixer": "*",
+    "grunt": "*",
     "grunt-concurrent": "*",
-    "grunt-contrib-clean": "^1.1.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-clean": "*",
+    "grunt-contrib-concat": "*",
+    "grunt-contrib-connect": "*",
+    "grunt-contrib-copy": "*",
+    "grunt-contrib-cssmin": "*",
     "grunt-contrib-imagemin": "*",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-uglify": "^3.3.0",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-jshint": "*",
+    "grunt-contrib-uglify": "*",
+    "grunt-contrib-watch": "*",
     "grunt-csscomb": "*",
     "grunt-htmlhint": "*",
-    "grunt-includes": "^1.0.0",
+    "grunt-includes": "*",
     "grunt-newer": "*",
-    "grunt-postcss": "^0.9.0",
-    "grunt-sass": "*",
-    "jit-grunt": "^0.10.0",
+    "grunt-postcss": "*",
+    "grunt-sass": "^3.0.2",
+    "jit-grunt": "*",
     "jshint-stylish": "*",
+    "node-sass": "^4.10.0",
     "time-grunt": "*"
   }
 }
